--- a/styles.css
+++ b/styles.css
@@ -2,60 +2,47 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #1e1e1e;
-    color: #fff;
-    font-size: 14px;
+    background-color: #262626;
+    color: #ddd;
 }
 
 .container {
-    text-align: center;
-    width: 80%;
-    max-width: 800px;
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #333;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color: #ddd;
 }
 
 input[type="text"],
 textarea {
-    padding: 8px;
-    margin: 3px;
-    width: 90%;
-    background-color: #333;
-    border: none;
-    color: #fff;
-    font-size: 14px;
+    width: calc(100% - 20px);
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #555;
+    background-color: #444;
+    color: #ddd;
 }
 
-textarea {
-    height: 400px;
-}
-
-#output {
-    padding: 8px;
-    width: 90%;
-    height: 400px;
-    overflow-y: auto;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    background-color: #333;
-    font-size: 14px;
+#outputText {
+    width: calc(100% - 20px);
+    height: 50vh;
+    margin-top: 9px;
+    margin-bottom: 0;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #555;
+    background-color: #444;
+    color: #ddd;
+    font-family: Arial, sans-serif;
+    resize: none;
 }
 
 label {
     color: #fff;
-    width: 90%;
-    font-size: 14px;
-    display: inline-block;
-    text-align: left;
-}
-
-#caseSensitiveLabel {
-    display: inline-block;
-    padding: 8px;
-    padding-left: 0;
-    margin: 3px;
 }
 
 #caseSensitive {
